LLECP/STExecEngine/CompilerCore/ANTLR/STGrammarParser.cpp

// Generated from STGrammar.g4 by ANTLR 4.13.1


#include "STGrammarListener.h"
#include "STGrammarVisitor.h"

#include "STGrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct STGrammarParserStaticData final {
  STGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  STGrammarParserStaticData(const STGrammarParserStaticData&) = delete;
  STGrammarParserStaticData(STGrammarParserStaticData&&) = delete;
  STGrammarParserStaticData& operator=(const STGrammarParserStaticData&) = delete;
  STGrammarParserStaticData& operator=(STGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag stgrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
STGrammarParserStaticData *stgrammarParserStaticData = nullptr;

void stgrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (stgrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(stgrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<STGrammarParserStaticData>(
    std::vector<std::string>{
      "one_para_set_func_name", "two_para_set_func_name", "read_func_name", 
      "program", "statement", "assignment", "expression", "if_statement", 
      "condition", "global_var_decl", "one_para_function", "two_para_function", 
      "read_set_function", "argumentList", "loop_statement", "till_statement", 
      "block_statement"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'#'", "'['", "']'", "", "", "", "", "','", "';'", 
      "", "", "", "'INT'", "'LREAL'", "'BOOL'", "'IF'", "'THEN'", "'ELSE'", 
      "'ELSIF'", "'END_IF'", "'TO'", "'DO'", "'END_FOR'", "':='", "'BY'", 
      "'LOOP'", "'END_LOOP'", "'TILL'", "'BLOCK'", "'END_BLOCK'", "'*'", 
      "'/'", "'+'", "'-'", "'AND'", "'OR'", "'NOT'", "'='", "'@'", "'>'", 
      "'<'", "'AXIS_ENABLE'", "'AXIS_DISABLE'", "'AXIS_STOP'", "'AXIS_MOVE_ABS'", 
      "'AXIS_MOVE_REL'", "'AXIS_MOVE_VEL'", "'AXIS_POS'", "'AXIS_VEL'", 
      "'AXIS_ACC'", "'AXIS_JERK'", "'AXIS_DEC'", "'AXIS_RESET'", "'AXIS_STAUTS_STATE'", 
      "'AXIS_STAUTS_ENABLE'", "'AXIS_STAUTS_MOVE'", "'DRIVE_SET_DO'", "'DRIVE_SET_AO'", 
      "'DRIVE_STAUTS_DI'", "'DRIVE_STAUTS_AI'", "'BUFFER_ENABLE'", "'BUFFER_DISABLE'", 
      "'WAIT'", "'NULL_CMD'", "'START_ANALOGFOCUSING'", "'STOP_ANALOGFOCUSING'", 
      "'START_PEG'", "'STOP_PEG'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "WS", "NEWLINE", "COMMENT", "LINE_COMMENT", 
      "COMMA", "SEMI", "BOOL", "INT", "LREAL", "INT_TYPE", "LREAL_TYPE", 
      "BOOL_TYPE", "IF", "THEN", "ELSE", "ELSE_IF", "END_IF", "TO", "DO", 
      "END_FOR", "ASSIGN", "BY", "LOOP", "END_LOOP", "TILL", "BLOCK", "END_BLOCK", 
      "MULT", "DIV", "PLUS", "MINUS", "AND", "OR", "NOT", "EQ", "NEQ", "GT", 
      "LT", "AXIS_ENABLE", "AXIS_DISABLE", "AXIS_STOP", "AXIS_MOVE_ABS", 
      "AXIS_MOVE_REL", "AXIS_MOVE_VEL", "AXIS_POS", "AXIS_VEL", "AXIS_ACC", 
      "AXIS_JERK", "AXIS_DEC", "AXIS_RESET", "AXIS_STAUTS_STATE", "AXIS_STAUTS_ENABLE", 
      "AXIS_STAUTS_MOVE", "DRIVE_SET_DO", "DRIVE_SET_AO", "DRIVE_STAUTS_DI", 
      "DRIVE_STAUTS_AI", "BUFFER_ENABLE", "BUFFER_DISABLE", "WAIT", "NULL_CMD", 
      "START_ANALOGFOCUSING", "STOP_ANALOGFOCUSING", "START_PEG", "STOP_PEG", 
      "ID"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  stgrammarParserStaticData = staticData.release();
}

}

STGrammarParser::STGrammarParser(TokenStream *input) : STGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

STGrammarParser::STGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  STGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *stgrammarParserStaticData->atn, stgrammarParserStaticData->decisionToDFA, stgrammarParserStaticData->sharedContextCache, options);
}

STGrammarParser::~STGrammarParser() {
  delete _interpreter;
}

const atn::ATN& STGrammarParser::getATN() const {
  return *stgrammarParserStaticData->atn;
}

std::string STGrammarParser::getGrammarFileName() const {
  return "STGrammar.g4";
}

const std::vector<std::string>& STGrammarParser::getRuleNames() const {
  return stgrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& STGrammarParser::getVocabulary() const {
  return stgrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView STGrammarParser::getSerializedATN() const {
  return stgrammarParserStaticData->serializedATN;
}


//----------------- One_para_set_func_nameContext ------------------------------------------------------------------

STGrammarParser::One_para_set_func_nameContext::One_para_set_func_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_ENABLE() {
  return getToken(STGrammarParser::AXIS_ENABLE, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_DISABLE() {
  return getToken(STGrammarParser::AXIS_DISABLE, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_STOP() {
  return getToken(STGrammarParser::AXIS_STOP, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_MOVE_ABS() {
  return getToken(STGrammarParser::AXIS_MOVE_ABS, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_MOVE_REL() {
  return getToken(STGrammarParser::AXIS_MOVE_REL, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_MOVE_VEL() {
  return getToken(STGrammarParser::AXIS_MOVE_VEL, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::AXIS_RESET() {
  return getToken(STGrammarParser::AXIS_RESET, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::WAIT() {
  return getToken(STGrammarParser::WAIT, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::BUFFER_ENABLE() {
  return getToken(STGrammarParser::BUFFER_ENABLE, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::BUFFER_DISABLE() {
  return getToken(STGrammarParser::BUFFER_DISABLE, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::START_ANALOGFOCUSING() {
  return getToken(STGrammarParser::START_ANALOGFOCUSING, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::STOP_ANALOGFOCUSING() {
  return getToken(STGrammarParser::STOP_ANALOGFOCUSING, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::START_PEG() {
  return getToken(STGrammarParser::START_PEG, 0);
}

tree::TerminalNode* STGrammarParser::One_para_set_func_nameContext::STOP_PEG() {
  return getToken(STGrammarParser::STOP_PEG, 0);
}


size_t STGrammarParser::One_para_set_func_nameContext::getRuleIndex() const {
  return STGrammarParser::RuleOne_para_set_func_name;
}

void STGrammarParser::One_para_set_func_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOne_para_set_func_name(this);
}

void STGrammarParser::One_para_set_func_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOne_para_set_func_name(this);
}


std::any STGrammarParser::One_para_set_func_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STGrammarVisitor*>(visitor))
    return parserVisitor->visitOne_para_set_func_name(this);
  else
    return visitor->visitChildren(this);
}

STGrammarParser::One_para_set_func_nameContext* STGrammarParser::one_para_set_func_name() {
  One_para_set_func_nameContext *_localctx = _tracker.createInstance<One_para_set_func_nameContext>(_ctx, getState());
  enterRule(_localctx, 0, STGrammarParser::RuleOne_para_set_func_name);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    _la = _input->LA(1);
    if (!(((((_la - 44) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 44)) & 129501247) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Two_para_set_func_nameContext ------------------------------------------------------------------

STGrammarParser::Two_para_set_func_nameContext::Two_para_set_func_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::AXIS_POS() {
  return getToken(STGrammarParser::AXIS_POS, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::AXIS_VEL() {
  return getToken(STGrammarParser::AXIS_VEL, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::AXIS_ACC() {
  return getToken(STGrammarParser::AXIS_ACC, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::AXIS_JERK() {
  return getToken(STGrammarParser::AXIS_JERK, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::AXIS_DEC() {
  return getToken(STGrammarParser::AXIS_DEC, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::DRIVE_SET_DO() {
  return getToken(STGrammarParser::DRIVE_SET_DO, 0);
}

tree::TerminalNode* STGrammarParser::Two_para_set_func_nameContext::DRIVE_SET_AO() {
  return getToken(STGrammarParser::DRIVE_SET_AO, 0);
}


size_t STGrammarParser::Two_para_set_func_nameContext::getRuleIndex() const {
  return STGrammarParser::RuleTwo_para_set_func_name;
}

void STGrammarParser::Two_para_set_func_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTwo_para_set_func_name(this);
}

void STGrammarParser::Two_para_set_func_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTwo_para_set_func_name(this);
}


std::any STGrammarParser::Two_para_set_func_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STGrammarVisitor*>(visitor))
    return parserVisitor->visitTwo_para_set_func_name(this);
  else
    return visitor->visitChildren(this);
}

STGrammarParser::Two_para_set_func_nameContext* STGrammarParser::two_para_set_func_name() {
  Two_para_set_func_nameContext *_localctx = _tracker.createInstance<Two_para_set_func_nameContext>(_ctx, getState());
  enterRule(_localctx, 2, STGrammarParser::RuleTwo_para_set_func_name);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1764285154022391808) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Read_func_nameContext ------------------------------------------------------------------

STGrammarParser::Read_func_nameContext::Read_func_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STGrammarParser::Read_func_nameContext::AXIS_STAUTS_STATE() {
  return getToken(STGrammarParser::AXIS_STAUTS_STATE, 0);
}

tree::TerminalNode* STGrammarParser::Read_func_nameContext::AXIS_STAUTS_ENABLE() {
  return getToken(STGrammarParser::AXIS_STAUTS_ENABLE, 0);
}

tree::TerminalNode* STGrammarParser::Read_func_nameContext::AXIS_STAUTS_MOVE() {
  return getToken(STGrammarParser::AXIS_STAUTS_MOVE, 0);
}

tree::TerminalNode* STGrammarParser::Read_func_nameContext::DRIVE_STAUTS_DI() {
  return getToken(STGrammarParser::DRIVE_STAUTS_DI, 0);
}

tree::TerminalNode* STGrammarParser::Read_func_nameContext::DRIVE_STAUTS_AI() {
  return getToken(STGrammarParser::DRIVE_STAUTS_AI, 0);
}


size_t STGrammarParser::Read_func_nameContext::getRuleIndex() const {
  return STGrammarParser::RuleRead_func_name;
}

void STGrammarParser::Read_func_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRead_func_name(this);
}

void STGrammarParser::Read_func_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRead_func_name(this);
}


std::any STGrammarParser::Read_func_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STGrammarVisitor*>(visitor))
    return parserVisitor->visitRead_func_name(this);
  else
    return visitor->visitChildren(this);
}

STGrammarParser::Read_func_nameContext* STGrammarParser::read_func_name() {
  Read_func_nameContext *_localctx = _tracker.createInstance<Read_func_nameContext>(_ctx, getState());
  enterRule(_localctx, 4, STGrammarParser::RuleRead_func_name);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7421932185906577408) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

STGrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STGrammarParser::ProgramContext::EOF() {
  return getToken(STGrammarParser::EOF, 0);
}

std::vector<STGrammarParser::StatementContext *> STGrammarParser::ProgramContext::statement() {
  return getRuleContexts<STGrammarParser::StatementContext>();
}

STGrammarParser::StatementContext* STGrammarParser::ProgramContext::statement(size_t i) {
  return getRuleContext<STGrammarParser::StatementContext>(i);
}


size_t STGrammarParser::ProgramContext::getRuleIndex() const {
  return STGrammarParser::RuleProgram;
}

void STGrammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void STGrammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any STGrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STGrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

STGrammarParser::ProgramContext* STGrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 6, STGrammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(40);
      statement();
      setState(43); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 15) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 15)) & 141863387725406223) != 0));
    setState(45);
    match(STGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

STGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STGrammarParser::StatementContext::SEMI() {
  return getToken(STGrammarParser::SEMI, 0);
}

STGrammarParser::AssignmentContext* STGrammarParser::StatementContext::assignment() {
  return getRuleContext<STGrammarParser::AssignmentContext>(0);
}

STGrammarParser::If_statementContext* STGrammarParser::StatementContext::if_statement() {
  return getRuleContext<STGrammarParser::If_statementContext>(0);
}

STGrammarParser::Global_var_declContext* STGrammarParser::StatementContext::global_var_decl() {
  return getRuleContext<STGrammarParser::Global_var_declContext>(0);
}

STGrammarParser::One_para_functionContext* STGrammarParser::StatementContext::one_para_function() {
  return getRuleContext<STGrammarParser::One_para_functionContext>(0);
}

STGrammarParser::Two_para_functionContext* STGrammarParser::StatementContext::two_para_function() {
  return getRuleContext<STGrammarParser::Two_para_functionContext>(0);
}

STGrammarParser::Read_set_functionContext* STGrammarParser::StatementContext::read_set_function() {
  return getRuleContext<STGrammarParser::Read_set_functionContext>(0);
}

STGrammarParser::Loop_statementContext* STGrammarParser::StatementContext::loop_statement() {
  return getRuleContext<STGrammarParser::Loop_statementContext>(0);
}

STGrammarParser::Block_statementContext* STGrammarParser::StatementContext::block_statement() {
  return getRuleContext<STGrammarParser::Block_statementContext>(0);
}

STGrammarParser::Till_statementContext* STGrammarParser::StatementContext::till_statement() {
  return getRuleContext<STGrammarParser::Till_statementContext>(0);
}

tree::TerminalNode* STGrammarParser::StatementContext::EOF() {
  return getToken(STGrammarParser::EOF, 0);
}

std::vector<tree::TerminalNode *> STGrammarParser::StatementContext::NEWLINE() {
  return getTokens(STGrammarParser::NEWLINE);
}

tree::TerminalNode* STGrammarParser::StatementContext::NEWLINE(size_t i) {
  return getToken(STGrammarParser::NEWLINE, i);
}


size_t STGrammarParser::StatementContext::getRuleIndex() const {
  return STGrammarParser::RuleStatement;
}

void STGrammarParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void STGrammarParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any STGrammarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STGrammarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

STGrammarParser::StatementContext* STGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, STGrammarParser::RuleStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STGrammarParser::ID: {
        setState(47);
        assignment();
        break;
      }

      case STGrammarParser::IF: {
        setState(48);
        if_statement();
        break;
      }

      case STGrammarParser::INT_TYPE:
      case STGrammarParser::LREAL_TYPE:
      case STGrammarParser::BOOL_TYPE: {
        setState(49);
        global_var_decl();
        break;
      }

      case STGrammarParser::AXIS_ENABLE:
      case STGrammarParser::AXIS_DISABLE:
      case STGrammarParser::AXIS_STOP:
      case STGrammarParser::AXIS_MOVE_ABS:
      case STGrammarParser::AXIS_MOVE_REL:
      case STGrammarParser::AXIS_MOVE_VEL:
      case STGrammarParser::AXIS_RESET:
      case STGrammarParser::BUFFER_ENABLE:
      case STGrammarParser::BUFFER_DISABLE:
      case STGrammarParser::WAIT:
      case STGrammarParser::START_ANALOGFOCUSING:
      case STGrammarParser::STOP_ANALOGFOCUSING:
      case STGrammarParser::START_PEG:
      case STGrammarParser::STOP_PEG: {
        setState(50);
        one_para_function();
        break;
      }

      case STGrammarParser::AXIS_POS:
      case STGrammarParser::AXIS_VEL:
      case STGrammarParser::AXIS_ACC:
      case STGrammarParser::AXIS_JERK:
      case STGrammarParser::AXIS_DEC:
      case STGrammarParser::DRIVE_SET_DO:
      case STGrammarParser::DRIVE_SET_AO: {
        setState(51);
        two_para_function();
        break;
      }

      case STGrammarParser::AXIS_STAUTS_STATE:
      case STGrammarParser::AXIS_STAUTS_ENABLE:
      case STGrammarParser::AXIS_STAUTS_MOVE:
      case STGrammarParser::DRIVE_STAUTS_DI:
      case STGrammarParser::DRIVE_STAUTS_AI: {
        setState(52);
        read_set_function();
        break;
      }

      case STGrammarParser::LOOP: {
        setState(53);
        loop_statement();
        break;
      }

      case STGrammarParser::BLOCK: {
        setState(54);
        block_statement();
        break;
      }

      case STGrammarParser::TILL: {
        setState(55);
        till_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(58);
    match(STGrammarParser::SEMI);
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STGrammarParser::NEWLINE: {
        setState(60); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(59);
          match(STGrammarParser::NEWLINE);
          setState(62); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == STGrammarParser::NEWLINE);
        break;
      }

      case STGrammarParser::EOF: {
        setState(64);
        match(STGrammarParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
